--- a/FacadeForge/FacadeForgeUI/FacadeForgeUI.csproj
+++ b/FacadeForge/FacadeForgeUI/FacadeForgeUI.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0" />
+    <PackageReference Include="Syncfusion.EJ2.AspNet.Core" Version="23.2.5" />
   </ItemGroup>
 
 </Project>
